--- a/cmds/cfgcomment/Cargo.toml
+++ b/cmds/cfgcomment/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "cfgcomment"
 description = "Universal comment conditional compilation preprocessor"
+authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
 license = "MIT"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
 [dependencies]
-env_logger = "0.9.0"
-log = "0.4.14"
 structopt = { version = "0.3.22", features = ["color", "suggestions", "wrap_help"] }
-cfgcomment-core = { version = "0.1.0", path = "../../crates/core" }
+cfgcomment-core = { version = "0.2.0", path = "../../crates/core" }
+git-filter-server = "0.1.0"
+tracing-subscriber = { version = "0.2.19", features = ["tracing-log"] }
+tracing = "0.1.26"
+anyhow = "1.0.42"
